[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/maingame/MainGame.gd" type="Script" id=1]
[ext_resource path="res://scenes/island/ThreadLoader.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/maingame/SaveLoadNode.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/mainmenu/MainMenu.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainGame" type="Spatial"]
script = ExtResource( 1 )

[node name="SaveLoadNode" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="ThreadLoader" parent="SaveLoadNode" instance=ExtResource( 2 )]

[node name="AddNode" type="Spatial" parent="."]

[node name="MainMenu" parent="AddNode" instance=ExtResource( 4 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 1 )

[connection signal="world_out" from="SaveLoadNode" to="." method="_on_SaveLoadNode_world_out"]
[connection signal="load_done" from="SaveLoadNode/ThreadLoader" to="SaveLoadNode" method="_on_ThreadLoader_load_done"]
